--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "backend01",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch src/server.js"
+    "dev": "node --watch ./src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "prisma": "^6.9.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Foxfce/poker_backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Foxfce/poker_backend/issues"
+  },
+  "homepage": "https://github.com/Foxfce/poker_backend#readme",
+  "description": ""
 }
