--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
+    "pokersolver": "^2.1.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
