--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
     "pokersolver": "^2.1.4",
+    "socket.io": "^4.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
