--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "prisma": "^6.9.0"
   },
   "repository": {
